use resolvePath()